[gd_scene load_steps=2 format=3 uid="uid://ciuqq47uqiywk"]

[ext_resource type="Script" path="res://scenes/computer/black_bars.gd" id="1_dmeyt"]

[node name="BlackBars" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmeyt")

[node name="TopBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -30.0
grow_horizontal = 2
color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[node name="BottomBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0156863, 0.0156863, 0.0156863, 1)
